refacto: 'URL(java.lang.String)' is deprecated since version 20